ch01, ch02 complete

--- a/02-Prompt/01-PromptTemplate.ipynb
+++ b/02-Prompt/01-PromptTemplate.ipynb
@@ -9,9 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T13:41:39.045954300Z",
+     "start_time": "2024-09-21T13:41:39.035438300Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -20,9 +34,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T13:41:39.082954800Z",
+     "start_time": "2024-09-21T13:41:39.045954300Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH02-Prompt\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# !pip install -qU langchain-teddynote\n",
@@ -41,8 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T13:41:41.291950700Z",
+     "start_time": "2024-09-21T13:41:39.853302200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
@@ -61,9 +95,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T13:41:41.573639900Z",
+     "start_time": "2024-09-21T13:41:41.557933Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PromptTemplate(input_variables=['country'], template='{country}의 수도는 어디인가요?')"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.prompts import PromptTemplate\n",
     "\n",
@@ -84,9 +132,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T13:41:43.627034Z",
+     "start_time": "2024-09-21T13:41:43.603848700Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'대한민국의 수도는 어디인가요?'"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# prompt 생성. format 메소드를 이용하여 변수에 값을 넣어줌\n",
     "prompt = prompt.format(country=\"대한민국\")\n",
@@ -417,9 +479,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T13:47:38.632585300Z",
+     "start_time": "2024-09-21T13:47:38.617067100Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "ChatPromptTemplate(input_variables=['country'], messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['country'], template='{country}의 수도는 어디인가요?'))])"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
@@ -429,18 +505,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T13:47:39.009741700Z",
+     "start_time": "2024-09-21T13:47:39.007649400Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'Human: 대한민국의 수도는 어디인가요?'"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chat_prompt.format(country=\"대한민국\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T13:47:40.307201400Z",
+     "start_time": "2024-09-21T13:47:40.302770100Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[SystemMessage(content='당신은 친절한 AI 어시스턴트입니다. 당신의 이름은 테디 입니다.'),\n HumanMessage(content='반가워요!'),\n AIMessage(content='안녕하세요! 무엇을 도와드릴까요?'),\n HumanMessage(content='당신의 이름은 무엇입니까?')]"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
@@ -460,6 +564,30 @@
     ")\n",
     "messages"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "ChatPromptTemplate(input_variables=['name', 'user_input'], messages=[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=['name'], template='당신은 친절한 AI 어시스턴트입니다. 당신의 이름은 {name} 입니다.')), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='반가워요!')), AIMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='안녕하세요! 무엇을 도와드릴까요?')), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['user_input'], template='{user_input}'))])"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chat_template"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-21T13:47:44.719875500Z",
+     "start_time": "2024-09-21T13:47:44.704054100Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -515,9 +643,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T13:49:10.962703Z",
+     "start_time": "2024-09-21T13:49:10.955484600Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "ChatPromptTemplate(input_variables=['conversation', 'word_count'], input_types={'conversation': typing.List[typing.Union[langchain_core.messages.ai.AIMessage, langchain_core.messages.human.HumanMessage, langchain_core.messages.chat.ChatMessage, langchain_core.messages.system.SystemMessage, langchain_core.messages.function.FunctionMessage, langchain_core.messages.tool.ToolMessage]]}, messages=[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='당신은 요약 전문 AI 어시스턴트입니다. 당신의 임무는 주요 키워드로 대화를 요약하는 것입니다.')), MessagesPlaceholder(variable_name='conversation'), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['word_count'], template='지금까지의 대화를 {word_count} 단어로 요약합니다.'))])"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
@@ -544,9 +686,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T13:50:39.967648200Z",
+     "start_time": "2024-09-21T13:50:39.963720400Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'System: 당신은 요약 전문 AI 어시스턴트입니다. 당신의 임무는 주요 키워드로 대화를 요약하는 것입니다.\\nHuman: 안녕하세요! 저는 오늘 새로 입사한 테디 입니다. 만나서 반갑습니다.\\nAI: 반가워요! 앞으로 잘 부탁 드립니다.\\nHuman: 지금까지의 대화를 5 단어로 요약합니다.'"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "formatted_chat_prompt = chat_prompt.format(\n",
     "    word_count=5,\n",
