--- a/02-Prompt/02-FewShotTemplates.ipynb
+++ b/02-Prompt/02-FewShotTemplates.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T14:42:24.515051200Z",
+     "start_time": "2024-09-21T14:42:24.493685100Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -13,9 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T14:42:24.521859400Z",
+     "start_time": "2024-09-21T14:42:24.515051200Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH02-Prompt\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# !pip install -qU langchain-teddynote\n",
@@ -34,9 +63,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T14:42:27.439595900Z",
+     "start_time": "2024-09-21T14:42:25.155688300Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "대한민국의 수도는 서울입니다."
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_teddynote.messages import stream_response\n",
@@ -57,8 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T14:42:32.583994800Z",
+     "start_time": "2024-09-21T14:42:32.581900200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_core.prompts.few_shot import FewShotPromptTemplate\n",
@@ -118,9 +165,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T14:42:35.737537300Z",
+     "start_time": "2024-09-21T14:42:35.729497600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question:\n",
+      "스티브 잡스와 아인슈타인 중 누가 더 오래 살았나요?\n",
+      "Answer:\n",
+      "이 질문에 추가 질문이 필요한가요: 예.\n",
+      "추가 질문: 스티브 잡스는 몇 살에 사망했나요?\n",
+      "중간 답변: 스티브 잡스는 56세에 사망했습니다.\n",
+      "추가 질문: 아인슈타인은 몇 살에 사망했나요?\n",
+      "중간 답변: 아인슈타인은 76세에 사망했습니다.\n",
+      "최종 답변은: 아인슈타인\n"
+     ]
+    }
+   ],
    "source": [
     "example_prompt = PromptTemplate.from_template(\n",
     "    \"Question:\\n{question}\\nAnswer:\\n{answer}\"\n",
@@ -194,9 +262,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T14:52:22.895797800Z",
+     "start_time": "2024-09-21T14:52:20.663947500Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "입력에 가장 유사한 예시:\n",
+      "Google이 창립된 연도에 Bill Gates의 나이는 몇 살인가요?\n",
+      "\n",
+      "question:\n",
+      "네이버의 창립자는 언제 태어났나요?\n",
+      "answer:\n",
+      "이 질문에 추가 질문이 필요한가요: 예.\n",
+      "추가 질문: 네이버의 창립자는 누구인가요?\n",
+      "중간 답변: 네이버는 이해진에 의해 창립되었습니다.\n",
+      "추가 질문: 이해진은 언제 태어났나요?\n",
+      "중간 답변: 이해진은 1967년 6월 22일에 태어났습니다.\n",
+      "최종 답변은: 1967년 6월 22일\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.example_selectors import (\n",
     "    MaxMarginalRelevanceExampleSelector,\n",
@@ -220,9 +312,9 @@
     ")\n",
     "\n",
     "# 입력과 가장 유사한 예시를 선택합니다.\n",
+    "question = \"Google이 창립된 연도에 Bill Gates의 나이는 몇 살인가요?\"\n",
     "selected_examples = example_selector.select_examples({\"question\": question})\n",
     "\n",
-    "question = \"Google이 창립된 연도에 Bill Gates의 나이는 몇 살인가요?\"\n",
     "print(f\"입력에 가장 유사한 예시:\\n{question}\\n\")\n",
     "for example in selected_examples:\n",
     "    print(f'question:\\n{example[\"question\"]}')\n",
