--- a/01-Basic/05-Runnable.ipynb
+++ b/01-Basic/05-Runnable.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T05:39:44.582763100Z",
+     "start_time": "2024-09-21T05:39:44.551194700Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# .env 파일을 읽어서 환경변수로 설정\n",
     "from dotenv import load_dotenv\n",
@@ -15,9 +29,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T05:39:47.093951200Z",
+     "start_time": "2024-09-21T05:39:47.076128600Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH01-Basic\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# !pip install -qU langchain-teddynote\n",
@@ -47,8 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T05:43:37.500724700Z",
+     "start_time": "2024-09-21T05:43:37.059671700Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_core.prompts import PromptTemplate\n",
@@ -57,7 +91,7 @@
     "\n",
     "# prompt 와 llm 을 생성합니다.\n",
     "prompt = PromptTemplate.from_template(\"{num} 의 10배는?\")\n",
-    "llm = ChatOpenAI(temperature=0)\n",
+    "llm = ChatOpenAI(model='gpt-3.5-turbo', temperature=0)\n",
     "\n",
     "# chain 을 생성합니다.\n",
     "chain = prompt | llm"
@@ -72,9 +106,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T05:43:45.561389400Z",
+     "start_time": "2024-09-21T05:43:44.865473900Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "AIMessage(content='50', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 1, 'prompt_tokens': 16, 'total_tokens': 17, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-e6b3acb1-b681-4abf-8c7f-6bd14e2ec230-0', usage_metadata={'input_tokens': 16, 'output_tokens': 1, 'total_tokens': 17})"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# chain 을 실행합니다.\n",
     "chain.invoke({\"num\": 5})"
@@ -108,9 +156,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T05:53:48.139151900Z",
+     "start_time": "2024-09-21T05:53:48.123330400Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'num': 10}"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.runnables import RunnablePassthrough\n",
     "\n",
@@ -127,9 +189,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T05:57:40.559814300Z",
+     "start_time": "2024-09-21T05:57:39.649860400Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "AIMessage(content='100입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 3, 'prompt_tokens': 16, 'total_tokens': 19, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-863e1d8a-efcb-4481-9cf0-2f19b77e2d67-0', usage_metadata={'input_tokens': 16, 'output_tokens': 3, 'total_tokens': 19})"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "runnable_chain = {\"num\": RunnablePassthrough()} | prompt | ChatOpenAI()\n",
     "\n",
@@ -146,9 +222,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T05:57:59.601181400Z",
+     "start_time": "2024-09-21T05:57:59.585461600Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'num': 1}"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "RunnablePassthrough().invoke({\"num\": 1})"
    ]
@@ -242,14 +332,29 @@
    "source": [
     "## RunnableLambda\n",
     "\n",
-    "RunnableLambda 를 사용하여 사용자 정의 함수를 맵핑할 수 있습니다.\n"
+    "RunnableLambda 를 사용하여 사용자 정의 함수를 맵핑할 수 있습니다.\n",
+    "api : https://api.python.langchain.com/en/latest/runnables/langchain_core.runnables.base.RunnableLambda.html\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T06:06:21.347178400Z",
+     "start_time": "2024-09-21T06:06:21.337869900Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'Sep-21'"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.prompts import PromptTemplate\n",
@@ -268,8 +373,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T13:31:53.370369Z",
+     "start_time": "2024-09-21T13:31:52.928690500Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_core.runnables import RunnableLambda, RunnablePassthrough\n",
@@ -291,9 +401,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T06:17:24.490630900Z",
+     "start_time": "2024-09-21T06:17:22.753018400Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "다음은 9월 21일에 태어난 유명인 세 명입니다:\n",
+      "\n",
+      "1. 빌 머레이 (Bill Murray) - 1950년 9월 21일\n",
+      "2. 니콜 리치 (Nicole Richie) - 1981년 9월 21일\n",
+      "3. 매기 그레이스 (Maggie Grace) - 1983년 9월 21일\n",
+      "\n",
+      "이들은 각각 배우, 텔레비전 인물, 그리고 배우로서 잘 알려져 있습니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# 출력\n",
     "print(chain.invoke(3))"
@@ -308,8 +437,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-21T06:11:53.159271900Z",
+     "start_time": "2024-09-21T06:11:52.644523100Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from operator import itemgetter\n",
@@ -349,6 +483,56 @@
     "    | model\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'good day'"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word = {\"word1\" : \"good day\"}\n",
+    "itemgetter(\"word1\")(word)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-21T06:19:38.610179300Z",
+     "start_time": "2024-09-21T06:19:38.604533100Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "8"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain_test = itemgetter(\"word1\") | RunnableLambda(length_function)\n",
+    "chain_test.invoke({\"word1\": \"good day\"})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-21T06:16:03.950531100Z",
+     "start_time": "2024-09-21T06:16:03.930990900Z"
+    }
+   }
   },
   {
    "cell_type": "code",
